# NeoGameEngine

./: .gitignore  Cargo.toml
Asset/engine_asset/: Cargo.toml
Asset/engine_asset/src/: asset.rs  bundle.rs  config.rs  cooker.rs  database.rs  dependency.rs  ecs.rs  error.rs  events.rs  features.rs  gc.rs  gpu_upload.rs  handle.rs  hot_reload.rs  id.rs  importer.rs  io.rs  lib.rs  loader.rs  metadata.rs  path.rs  prelude.rs  ref_asset.rs  registry.rs  server.rs  storage.rs  streaming.rs
Asset/engine_asset/src/assets/: animation.rs  audio.rs  font.rs  material.rs  mesh.rs  mod.rs  physics_mesh.rs  prefab.rs  scene.rs  shader.rs  skeleton.rs  texture.rs
Asset/engine_asset/tests/: bundle.rs  database.rs  dependency.rs  ecs.rs  error_model.rs  feature_flags.rs  gc.rs  gpu_upload.rs  hot_reload.rs  io.rs  load_group.rs  loader.rs  runtime.rs  scheduler.rs  serde.rs  storage.rs  streaming.rs
Graphics/engine_graphics/: Cargo.toml
Graphics/engine_graphics/src/: error.rs  lib.rs  surface.rs
Graphics/graphics_wgpu/: Cargo.toml
Graphics/graphics_wgpu/src/: lib.rs  surface.rs
Physics/engine_physics/: Cargo.toml
Physics/engine_physics/src/: backend.rs  body.rs  character.rs  collider.rs  command.rs  config.rs  debug.rs  ecs.rs  error.rs  event.rs  filter.rs  hooks.rs  id.rs  joint.rs  lib.rs  material.rs  math.rs  mesh.rs  prelude.rs  query.rs  snapshot.rs  world.rs
Physics/engine_physics/tests/: physics_world.rs
Platform/engine_platform/: Cargo.toml
Platform/engine_platform/src/: error.rs  event.rs  fs.rs  input.rs  lib.rs  time.rs  window.rs
Platform/platform_winit/: Cargo.toml
Platform/platform_winit/src/: context.rs  convert.rs  fs.rs  lib.rs  platform.rs  window.rs
Render/engine_render/: Cargo.toml
Render/engine_render/src/: camera.rs  gltf.rs  lib.rs  light.rs  material.rs  mesh.rs  queue.rs  scene.rs  texture.rs  transform.rs
Render/engine_renderer/: Cargo.toml
Render/engine_renderer/src/: backend_wgpu.rs  graph.rs  lib.rs  rhi.rs
Render/render_wgpu/: Cargo.toml
Render/render_wgpu/src/: deferred_lighting.wgsl  gbuffer.wgsl  lib.rs  mesh.rs  mesh.wgsl  mesh_renderer.rs  post_process.wgsl  post_process_sampled.wgsl  probe.rs  probe_prefilter.wgsl  scene.rs  shadow.wgsl  skybox.wgsl  texture.rs
Render/render_wgpu/tests/: pipeline_inventory.rs
docs/: asset_goal.md  asset_goal_audit_report.md  asset_goal_coverage_matrix.md  engine_asset_api.md  engine_physics_api.md  physics_goal.md  physics_goal_audit_report.md  physics_goal_coverage_matrix.md  render_architecture.md  renderer_goal.md  renderer_goal_audit_report.md  renderer_goal_coverage_matrix.md  rust_3d_renderer_api_design.md
examples/asset_smoke/: Cargo.toml
examples/asset_smoke/src/: lib.rs  main.rs
examples/physics_render_window/: Cargo.toml
examples/physics_render_window/src/: main.rs
examples/physics_showcase/: Cargo.toml
examples/physics_showcase/src/: main.rs
examples/platform_smoke/: Cargo.toml
examples/platform_smoke/src/: main.rs
examples/render_facade_usecase/: Cargo.toml
examples/render_facade_usecase/src/: main.rs
examples/render_facade_window_usecase/: Cargo.toml
examples/render_facade_window_usecase/src/: main.rs
examples/render_feature_showcase/: Cargo.toml
examples/render_feature_showcase/src/: main.rs
examples/render_scene_usecase/: Cargo.toml
examples/render_scene_usecase/src/: main.rs
examples/render_smoke/: Cargo.toml  README.md
examples/render_smoke/src/: main.rs
