[package]
name = "render_feature_showcase"
version = "0.1.0"
edition = "2021"

[dependencies]
engine_graphics = { path = "../../Graphics/engine_graphics" }
engine_platform = { path = "../../Platform/engine_platform" }
engine_render = { path = "../../Render/engine_render" }
graphics_wgpu = { path = "../../Graphics/graphics_wgpu" }
platform_winit = { path = "../../Platform/platform_winit" }
render_wgpu = { path = "../../Render/render_wgpu" }
